--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@trendyol-js/react-carousel": "^3.0.2",
+    "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slider": "^1.3.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
